# Lora_admin

./: CMakeLists.txt  main.old  sdkconfig  sdkconfig.old
Web_controller/: index.html  mqtt_config.js  mqtt_script.js  styles.css  test.html
Web_controller_V2/: index.html  mqtt_config.js  mqtt_script.js  styles.css  test
main/: CMakeLists.txt  main.c
main/CALL_COP/: call_cop.c  call_cop.h
main/GPIO/: gpio.c  gpio.h
main/SERVER/: HTTP.c  HTTP.h  MQTT.c  MQTT.h
main/UART_Lora/: uart_lora.c  uart_lora.h
main/WIFI/: STA_wifi.c.old  STA_wifi.h.old  Smart_config.c  Smart_config.h
